// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "gokitgrpc/user/pb";
option java_multiple_files = true;
option java_package = "io.gokitgrpc.user";
option java_outer_classname = "GokitGRPCProto";

package pb;

// Interface exported by the server.
service UserGrpc {
  rpc ViewUser(ViewUserRequest) returns (UserResponse) {}
  rpc ListUsers(ListUserRequest) returns (UsersResponse) {}
  rpc CreateUser(CreateUserRequest) returns (Response) {}
  rpc UpdateUser(UpdateUserRequest) returns (Response) {}
  rpc DeleteUser(DeleteUserRequest) returns (Response) {}
  rpc AuthenticateUser(AuthenticateUserRequest) returns (AuthenticateResponse) {}
}

message UserResponse {
  string Id = 1;
  string Name = 2;
  string Phone = 3;
  string Email = 4;
  string Password = 5;
}

message UsersResponse {
  string Id = 1;
  string Name = 2;
  string Phone = 3;
  string Email = 4;
  string Password = 5;
}

message ViewUserRequest {
  string Id = 1;
}

message ListUserRequest {
  string Limit = 1;
  string Offset = 2;
}

message CreateUserRequest {
  string Name = 1;
  string Phone = 2;
  string Email = 4;
  string Password = 5;
}

message UpdateUserRequest {
  string Id = 1;
  string Name = 2;
  string Phone = 3;
  string Email = 4;
}

message DeleteUserRequest {
  string Id = 1;
}

message AuthenticateUserRequest {
  string Phone = 1;
  string Password = 2;
}

message Response {
  string Message = 1;
}

message AuthenticateResponse {
  string AccessToken = 1;
}